--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# suppress inspection "UnusedProperty" for whole file
+
+server.port=8085
+
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5455/psi
+spring.datasource.username=postgres
+spring.datasource.password=
 
