--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/jquery": "^3.5.9",
+    "autoprefixer": "^10.4.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.6.0",
+    "postcss": "^8.4.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
